--- a/sales.html
+++ b/sales.html
@@ -3,8 +3,8 @@
 <head>
 
   <title>Salmon Cookie Sales</title>
-  <link rel="stylesheet" href="/css/reset.css">
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="css/reset.css">
+  <link rel="stylesheet" href="css/style.css">
 
 </head>
 <body>
@@ -17,8 +17,8 @@
     <h2>Cities</h2>
     <section id="city"></section>
   </main>
-  
+
   <footer>&copy; Jordan Covington</footer>
-  <script src="/js/app.js"></script>
+  <script src="js/app.js"></script>
 </body>
 </html>
