created DOM window for tables

--- a/sales.html
+++ b/sales.html
@@ -15,7 +15,7 @@
   
   <main>
     <h2>Cities</h2>
-    <section id="city"></section>
+    <table id="sales"></table>
   </main>
 
   <footer>&copy; Jordan Covington</footer>
