--- a/index.html
+++ b/index.html
@@ -5,10 +5,60 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="css/reset.css">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Kdam+Thmor+Pro&display=swap" rel="stylesheet">
 </head>
 <body>
-  <h1>Salmon Cookies</h1>
-  <a href="sales.html">Sales</a>
-  
+  <header>
+    <h1>Salmon Cookies</h1>
+    <img src="img/salmon.png" alt="Picture of a Salmon">
+    <a href="sales.html">Sales</a>
+
+  </header>
+  <main>
+    <section id="store">
+      <h2>Salmon Cookies Store</h2>
+      <div>
+        <figure>
+          <img src="img/cutter.jpeg" alt="Picture of a salmon cookie cutter">
+          <figcaption>Salmon Cookie Cutters!</figcaption>
+        </figure>
+        <figure>
+          <img src="img/frosted-cookie.jpg" alt="Picture of a Frosted Salmon Cookie">
+          <figcaption>Salmon Cookies!</figcaption>
+        </figure>
+        <figure>
+          <img src="img/shirt.jpg" alt="Picture of a Salmon T-Shirt">
+          <figcaption>Salmon Shirts!</figcaption>
+        </figure>
+      </div>
+    </section>
+    <section id="contest">
+      <div>
+        <img src="img/family.jpg" alt="Picture of a family with cookies and milk">
+        <article>
+          <h2>Family Cookie Eating Contest</h2>
+          <p>Join our Seattle Branch for a Cookie Eating contest! Teams of 3 will try to eat aas many salmon cookies possible in 15 minutes. Prizes for the top 3 families! Medics will be on standby. We hope to reduce our fatalities this year to none!!</p>
+        </article>
+      </div>
+    </section>
+    <section id="locations">
+      <h2>Stores</h2>
+      <img src="img/fish.jpg" alt="Cartoon of fish">
+      <ul>
+        <li>Seattle - 123 CSS Ln. Seattle, WA 93253</li>
+        <li>Tokyo - 452 Salmon Dr. Tokyo, Japan 32412</li>
+        <li>Dubai - 654 Desert Blvd. Dubai, UAE 35342</li>
+        <li>Paris - 3241 Cookie St. Paris, France 32133</li>
+        <li>Lima - 678 Frosting Dr. Lima, Peru 54633  </li>
+      </ul>
+    </section>
+  </main>
+  <footer>
+    <img src="img/chinook.jpg" alt="Picture of a Chinook">
+  </footer>
 </body>
 </html>
