Home page link added

--- a/sales.html
+++ b/sales.html
@@ -11,7 +11,8 @@
 <body>
   
   <header>
-   <h1>Salmon Cookie Sales</h1> 
+   <h1>Salmon Cookie Sales</h1>
+   <a href="index.html">Home</a> 
   </header>
   
   <main>
