--- a/index.html
+++ b/index.html
@@ -41,7 +41,12 @@
         <img src="img/family.jpg" alt="Picture of a family with cookies and milk">
         <article>
           <h2>Family Cookie Eating Contest</h2>
-          <p>Join our Seattle Branch for a Cookie Eating contest! Teams of 3 will try to eat aas many salmon cookies possible in 15 minutes. Prizes for the top 3 families! Medics will be on standby. We hope to reduce our fatalities this year to none!!</p>
+          <p>Join our Seattle Branch for a Cookie Eating contest! Teams of 3 will try to eat as many salmon cookies possible in 15 minutes. Prizes for the top 3 families! Medics will be on standby. We hope to reduce our fatalities this year to none!! Once you start you MUST finish or we will release the hounds.</p>
+          <ol>
+            <li>1st Place - Infinite Bragging rights and $20</li>
+            <li>2nd Place - Certificate of Accomplishment that says "So close yet so far..."</li>
+            <li>3rd Place - Cookie Contest Hall of Famers throw Salmon Cookies at you while screaming "You aren't good enough!"</li>
+          </ol>
         </article>
       </div>
     </section>
@@ -49,16 +54,18 @@
       <h2>Stores</h2>
       <img src="img/fish.jpg" alt="Cartoon of fish">
       <ul>
-        <li>Seattle - 123 CSS Ln. Seattle, WA 93253</li>
-        <li>Tokyo - 452 Salmon Dr. Tokyo, Japan 32412</li>
-        <li>Dubai - 654 Desert Blvd. Dubai, UAE 35342</li>
-        <li>Paris - 3241 Cookie St. Paris, France 32133</li>
-        <li>Lima - 678 Frosting Dr. Lima, Peru 54633  </li>
+        <li>Seattle - 123 CSS Ln. Seattle, WA 93253 - Contact - 342-245-2145 - Hours - Monday-Friday 6AM-7PM </li>
+        <li>Tokyo - 452 Salmon Dr. Tokyo, Japan 32412 - Contact - 324-212-4264 - Hours - Monday-Friday 6AM-7PM </li>
+        <li>Dubai - 654 Desert Blvd. Dubai, UAE 35342 - Contact - 867-008-4536 - Hours - Monday-Friday 6AM-7PM </li>
+        <li>Paris - 3241 Cookie St. Paris, France 32133 - Contact - 663-736-6356 - Hours - Monday-Friday 6AM-7PM </li>
+        <li>Lima - 678 Frosting Dr. Lima, Peru 54633 - Contact - 324-266-3463 - Hours - Monday-Friday 6AM-7PM </li>
       </ul>
     </section>
   </main>
   <footer>
+    <p>&copy; Jordan Covington</p>
     <img src="img/chinook.jpg" alt="Picture of a Chinook">
+
   </footer>
 </body>
 </html>
