--- a/sales.html
+++ b/sales.html
@@ -8,19 +8,41 @@
   <link rel="stylesheet" href="css/style.css">
 
 </head>
+
 <body>
-  
+
   <header>
-   <h1>Salmon Cookie Sales</h1>
-   <a href="index.html">Home</a> 
+    <h1>Salmon Cookie Sales</h1>
+    <a href="index.html">Home</a>
   </header>
-  
+
   <main>
     <h2>Cities</h2>
     <table id="sales"></table>
   </main>
 
+  <form id="cookie-form">
+    <fieldset>
+      <legend> </legend>
+
+      <label for="cityName">City Name</label>
+      <input type="text" id="cityName" name="cityName">
+
+      <label for="minCustomer">Minimum Customer</label>
+      <input type="number" id="minCustomer" name="minCustomer">
+
+      <label for="maxCustomer">Maximum Customer</label>
+      <input type="number" id="maxCustomer" name="maxCustomer">
+
+      <label for="averageCookie">Average Cookie</label>
+      <input type="number" step="0.01" id="averageCookie" name="averageCookie">
+
+    </fieldset>
+    <button type="submit">Submit</button>
+  </form>
+
   <footer>&copy; Jordan Covington</footer>
   <script src="js/app.js"></script>
 </body>
+
 </html>
